--- a/configuration/projects-properties.json
+++ b/configuration/projects-properties.json
@@ -1,7 +1,20 @@
 {
-	"all":{
+	"common":{
 		"uri":"https://anypoint.mulesoft.com",
 		"region":"eu-west-1",
+		"businessGroups":{			
+			"Arquitectura":"e486b882-62f5-43a9-b6f7-1575393c0308",
+			"Core":"e494ce82-2117-48a5-b4d1-b36c0293292e",
+			"CajaMar Vida":"b897eede-02c0-45bd-8aa7-d693049e7795",
+			"CajaMar Seguros Generales":"300908af-6ea9-46d4-891f-f71fed2ec3d5",
+			"Generali":"f7bd6e8e-7acc-449b-9438-592b488d387e"
+		},
+		"environments":{
+			"int":{"ci":"122f0a94b058436c89c63b2c3abc0949","cs":"s8028fCd42dE84AB2B8d13eC86C22BD17"},			
+			"dev":{"ci":"ff0d8978ee9e4fccaacb6b8d055e65b4","cs":"BB1983d048944ca5b91e8C42d1C15cB2"},			
+			"pre":{"ci":"80457c7708ae4ee8bbb692ff8c0b4185","cs":"9DB61B21d0a1488B86E3eA3774d7Ddf6"},			
+			"pro":{"ci":"38290275ba5748eeb71af4750ab2fc6f","cs":"88709b9fDac94C6CB17Ce698bdA82e91"}
+		},
 		"policies":["client-id-enforcement"]
 	},
 	"default":{
@@ -9,21 +22,23 @@
 		"workers":"1",
 		"workerType":"MICRO"
 	},
-	"test-helloworld":{
-		"businessGroup": "prueba",
-		"dev": null,
-		"int":{
-			"muleVersion":"4.4.0"
-			"excludedPolicies":["client-id-enforcement"]
-		},
-		"pre":{
-			"muleVersion":"4.4.0",
-			"workerType":"SMALL"
-		},
-		"pro":{
-			"muleVersion":"4.4.0",
-			"workers":"2",
-			"workerType":"MEDIUM"
+	"applications":{
+		"test-helloworld":{
+			"businessGroup": "Arquitectura",
+			"int": null,
+			"dev":{
+				"muleVersion":"4.4.0",
+				"excludedPolicies":["client-id-enforcement"]
+			},
+			"pre":{
+				"muleVersion":"4.4.0",
+				"workerType":"SMALL"
+			},
+			"pro":{
+				"muleVersion":"4.4.0",
+				"workers":"2",
+				"workerType":"MEDIUM"
+			}
 		}
-    }
+	}
 }
